my account pages rtl design alignment fix and other pages rtl design fix

--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -183,3 +183,21 @@
   }
 
 }
+
+
+// RTL Layout
+
+[dir="rtl"] {
+
+  .toggle {
+    &::after {
+      transform: translateX(20px);
+    }
+
+    &:checked {
+      &::after {
+        transform: translateX(0px);
+      }
+    }
+  }
+}
