--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -876,6 +876,7 @@
       overflow-x: auto;
       scroll-snap-type: x mandatory;
       -webkit-overflow-scrolling: touch;
+      gap: 16px;
     }
 
     .destination-card {
@@ -888,7 +889,7 @@
 
       .destination-card-items {
         border-radius: 12px;
-        width: 322px;
+        width: 300px;
         height: 200px;
 
         .property-location-tag {
@@ -1060,7 +1061,7 @@
       -webkit-overflow-scrolling: touch;
 
       .blog-card-items {
-        flex: 0 0 322px;
+        flex: 0 0 300px;
 
         .blog-card-items-img {
           border-radius: 12px;
@@ -1290,5 +1291,19 @@
     }
   }
 
+  .home-banner-section {
+    .banner-content {
+      .banner-property-filter {
+        .choose-location-and-date {
+          .choose-location-items {
 
+            &:nth-child(2),
+            &:nth-child(3) {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
 }
